Replace initializations of default lists with List.of() calls